Intersection Observer: bounding client rect is wrong for an inline element https://bugs.webkit.org/show_bug.cgi?id=198009

Reviewed by Simon Fraser.

LayoutTests/imported/w3c:

Import test added upstream in
https://github.com/web-platform-tests/wpt/commit/cf40205c68f739ae23429439de13d125e3df9f7a

* web-platform-tests/intersection-observer/inline-with-block-child-client-rect-expected.txt: Added.
* web-platform-tests/intersection-observer/inline-with-block-child-client-rect.html: Added.

Source/WebCore:

Make target rect computation for inline elements share logic with the computation
of bounding client rects.

Test: imported/w3c/web-platform-tests/intersection-observer/inline-with-block-child-client-rect.html

* dom/Document.cpp:
(WebCore::computeIntersectionState):
* dom/Element.cpp:
(WebCore::Element::boundingAbsoluteRectWithoutLayout):
(WebCore::Element::boundingClientRect):
* dom/Element.h:


Canonical link: https://commits.webkit.org/212201@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245642 268f45cc-cd09-0410-ab3c-d52691b4dbfc